force-app/main/default/objects/AccountProfile__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Тип заведения</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ресторан</fullName>
            </value>
            <value>
                <fullName>Кафе</fullName>
            </value>
            <value>
                <fullName>Бар</fullName>
            </value>
            <value>
                <fullName>Бургерная</fullName>
            </value>
            <value>
                <fullName>Паб</fullName>
            </value>
            <value>
                <fullName>Кулинария</fullName>
            </value>
            <value>
                <fullName>Кондитерская</fullName>
            </value>
            <value>
                <fullName>Пекарня</fullName>
            </value>
            <value>
                <fullName>Хинкальная</fullName>
            </value>
            <value>
                <fullName>Другое</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>