force-app/main/default/objects/AccountProfile__c/fields/ChainEmail__c.field-meta.xml
<CustomField>
    <fullName>ChainEmail__c</fullName>
    <label>Эл. почта руководителя сети</label>
    <type>Email</type>
</CustomField>