force-app/main/default/objects/AccountProfile__c/fields/Contsct__c.field-meta.xml
<CustomField>
    <fullName>Contsct__c</fullName>
    <label>Контактное лицо для совместного PR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>