force-app/main/default/objects/AccountProfile__c/fields/CuisineType__c.field-meta.xml
<CustomField>
    <fullName>CuisineType__c</fullName>
    <label>Вид кухни, предлагаемой в ресторане</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Авторская</fullName>
            </value>
            <value>
                <fullName>Азербайджанская</fullName>
            </value>
            <value>
                <fullName>Азиатская</fullName>
            </value>
            <value>
                <fullName>Американская</fullName>
            </value>
            <value>
                <fullName>Английская</fullName>
            </value>
            <value>
                <fullName>Армянская</fullName>
            </value>
            <value>
                <fullName>Балканская</fullName>
            </value>
            <value>
                <fullName>Бельгийская</fullName>
            </value>
            <value>
                <fullName>Болгарская</fullName>
            </value>
            <value>
                <fullName>Бургеры</fullName>
            </value>
            <value>
                <fullName>Веганская</fullName>
            </value>
            <value>
                <fullName>Вегетарианская</fullName>
            </value>
            <value>
                <fullName>Вок</fullName>
            </value>
            <value>
                <fullName>Восточная</fullName>
            </value>
            <value>
                <fullName>Выпечка</fullName>
            </value>
            <value>
                <fullName>Вьетнамская</fullName>
            </value>
            <value>
                <fullName>Гавайская</fullName>
            </value>
            <value>
                <fullName>Греческая</fullName>
            </value>
            <value>
                <fullName>Грузинская</fullName>
            </value>
            <value>
                <fullName>Десерты</fullName>
            </value>
            <value>
                <fullName>Детское меню</fullName>
            </value>
            <value>
                <fullName>Домашняя</fullName>
            </value>
            <value>
                <fullName>Еврейская</fullName>
            </value>
            <value>
                <fullName>Европейская</fullName>
            </value>
            <value>
                <fullName>Закуски</fullName>
            </value>
            <value>
                <fullName>Здоровая еда</fullName>
            </value>
            <value>
                <fullName>Индийская</fullName>
            </value>
            <value>
                <fullName>Испанская</fullName>
            </value>
            <value>
                <fullName>Итальянская</fullName>
            </value>
            <value>
                <fullName>Кавказская</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>