force-app/main/default/objects/AccountProfile__c/fields/GetMenu__c.field-meta.xml
<CustomField>
    <fullName>GetMenu__c</fullName>
    <label>Способ передачи меню</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Из файла</fullName>
            </value>
            <value>
                <fullName>По ссылке</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>