force-app/main/default/objects/AccountProfile__c/fields/GetMenuPhoto__c.field-meta.xml
<CustomField>
    <fullName>GetMenuPhoto__c</fullName>
    <label>Способ передачи фото для меню</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Фото нет</fullName>
            </value>
            <value>
                <fullName>Из файла</fullName>
            </value>
            <value>
                <fullName>По ссылке</fullName>
            </value>
            <value>
                <fullName>Фотосъемка</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>