force-app/main/default/objects/AccountProfile__c/fields/OrgProfile__c.field-meta.xml
<CustomField>
    <fullName>OrgProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Анкета</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>AccountProfiles</relationshipLabel>
    <relationshipName>AccountProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>