force-app/main/default/objects/AccountProfile__c/fields/UrlMenu__c.field-meta.xml
<CustomField>
    <fullName>UrlMenu__c</fullName>
    <label>Ссылка на меню</label>
    <type>Url</type>
</CustomField>