force-app/main/default/objects/AccountProfile__c/fields/UrlPhotoMenu__c.field-meta.xml
<CustomField>
    <fullName>UrlPhotoMenu__c</fullName>
    <label>Ссылка на фото для меню</label>
    <type>Url</type>
</CustomField>